--- a/css-index/index.css
+++ b/css-index/index.css
@@ -1,107 +1,30 @@
-/* @import url('responsive-index.css'); */
-/* @import url('utilities-index/borders-index.css'); */
-/* @import url('utilities-index/colors-index.css'); */
-/* @import url('utilities-index/effects-index.css'); */
-/* @import url('utilities-index/layout-index.css'); */
-/* @import url('utilities-index/position-index.css'); */
-/* @import url('utilities-index/sizing-index.css'); */
-/* @import url('utilities-index/spacing-index.css'); */
-/* @import url('utilities-index/text-index.css'); */
 /* I Think i should just keep footer-double-link-header for now and rename it to mobile, but 
 make sure you don't overwrite a good footer-double-link, this one seems good but not 100% sure */
 @import url('footer-double-link-header.css');
+@import url('utilities-index/colors-index.css');
+@import url('utilities-index/borders-index.css');
+@import url('utilities-index/effects-index.css');
 @import url('responsive-index.css');
+@import url('utilities-index/layout-index.css');
+@import url('utilities-index/spacing-index.css');
+@import url('utilities-index/sizing-index.css');
+@import url('utilities-index/text-index.css');
 * {
     margin:0; 
     padding:0;
     box-sizing: border-box;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-#mainContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-}
-.topic { 
-    display: flex;
-    flex-direction: column;
-    margin: 2% 0 ;
-}
-.topic  > .drop-topic {
-    padding: .5% 0 ;
-    padding-left: 2%;
-    border: 1px solid black;
-    display: flex;
-}
-.resource {
-    border: 1px solid black;
-}
-.sub-topics-container > .drop-topic{
-    border: none;
-    background-color: blue;
-}
 .topic > .sub-topics-container,
 .topic ul.sub-resources-container
- {
-    margin-top: 1%;
-    margin-left: 5%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: stretch;
-    display: flex;    
-    align-items: stretch;
+{
     list-style: none;
-    text-decoration: none;
-    gap: 1%;
 }
-ul.sub-resources-container > li{
-    /* margin-top: 1%; */
-    display: inline;
+.topics-container > .topic > ul.sub-resources-container > li{
     list-style: none;
-    flex-direction: column;
 }
-a.resource{
-    display: flex;
-    display: inline-flex;
-    flex-direction: column;
-    height: 100%;
-    text-decoration: none;
-}
-a.resource:visited{
-    color: blue;
-}
-.drop-topic:active,.drop-topic:focus{
-    box-shadow: 2px 0 4px 3px blue;
-
-}
-.resource:active,.resource:focus{
-    box-shadow: 2px 2px 8px 6px lightseagreen;
-}
-
-.animate{
-    position: relative;
-    box-shadow: 0 0 3px 3px orange;
-    z-index: 1;
-    transform: scale(1.3);
-    transform: all 1000ms;
-}
-.hide {
-    display: none !important;
-}
-.show {
-    display: inline-block;
-}
-
-.topic>.drop-topic>img {
-    max-height: 50px;
-    margin-left: 2.5%;
-}
-.resource>img {    
-    /* margin-top: 1%; */
-    margin-left: 1.26%;
-    max-height: 50px;
-}
-
+.hide {display: none !important;}
+.show {display: inline-block;}
 
 /* #aiYoutube:focus, */
 #aiLogo {
