--- a/css-index/utilities-index/borders-index.css
+++ b/css-index/utilities-index/borders-index.css
@@ -1,8 +1,13 @@
-.page-wrapper>footer.footer-header {
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-}
-.footer-header .main-links>a {
+.topic>.drop-topic {
     border: 1px solid black;
-    border-radius: 5px;
+}
+.resource {
+    border: 1px solid black;
+}
+
+.sub-topics-container>.drop-topic {
+    border: none;
+}
+.topics-container>.topic>ul.sub-resources-container>li {
+    border: 2px solid red;
 }
