--- a/css-index/utilities-index/effects-index.css
+++ b/css-index/utilities-index/effects-index.css
@@ -1,6 +1,17 @@
+.drop-topic:active,
+.drop-topic:focus {
+    box-shadow: 2px 0 4px 3px blue;
+}
 
+.resource:active,
+.resource:focus {
+    box-shadow: 2px 2px 8px 6px lightseagreen;
+}
 
-.main-links a:active,
-.main-links a:focus {
-    box-shadow: 0px 2px 3px 3px lightseagreen;
+.animate {
+    position: relative;
+    box-shadow: 0 0 3px 3px orange;
+    z-index: 1;
+    transform: scale(1.3);
+    transform: all 1000ms;
 }
