--- a/css-index/utilities-index/sizing-index.css
+++ b/css-index/utilities-index/sizing-index.css
@@ -1,25 +1,13 @@
-.page-wrapper main#mainContainer {
-    height: 75vh;
-}
-.page-title {
-    width: 100%;
-}
-.page-title>img {
+.topic>.drop-down>img {
     max-height: 50px;
-    max-width: 200px;
 }
-.page-title>h1 img {
-    height: 50%;
-    width: 50%;
+
+.topics-container>.topic>ul.sub-resources-container>li {
+    height: 5vh;
 }
-.page-wrapper>footer.footer-header>.page-logo>img {
+a.resource {
     height: 100%;
-    width: 100%;
-    max-height: 100px;
 }
-.footer-header .main-links>a {
-    height: 40px;
-}
-.page-logo img {
-    max-width: 100px;
+.resource>img {    
+    max-height: 50px;
 }
