--- a/topics/chatbots/01bo-Sar-howToBuildAi-2025/css/main.css
+++ b/topics/chatbots/01bo-Sar-howToBuildAi-2025/css/main.css
@@ -1,9 +1,11 @@
 /* utilities */
 @import url('utilities/borders.css');
+@import url('utilities/effects.css');
 @import url('utilities/grid.css');
 @import url('utilities/layout.css');
 @import url('utilities/sizing.css');
 @import url('utilities/spacing.css');
+@import url('utilities/text.css');
 *{
     margin: 0;
     padding: 0;
