--- a/topics/chatbots/01bo-Sar-howToBuildAi-2025/css/utilities/sizing.css
+++ b/topics/chatbots/01bo-Sar-howToBuildAi-2025/css/utilities/sizing.css
@@ -1,7 +1,18 @@
+.page-header.grid {
+    .box {
+        width: 100%;
+    }
+    .box > .a {
+        border: 1px solid red;
+        height: 100%;
+        width: 100%;
+    }
+    
+}
+
 .tutorialLink-darkModeBtn-container a#tutorialLink img {
-    /* border: 12px solid orange; */
     width: 90%;
-    max-width: 200px;
+    max-width: 280px;
     max-height: 80px;
 
 }
